Fixed an issue where the content was too big on mobile causing a screen shift.

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,15 @@ body {
   height: 100vh;
 }
 
+h1.title {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  color: aqua;
+  text-shadow: 0 0 5px aqua;
+  font-size: 2.5rem;
+}
+
 #header {
   display: flex;
   background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('./stars-bg.jpg') center center no-repeat;
@@ -182,15 +191,33 @@ body {
   font-size: 3rem;
 }
 
-.title span {
+h1.title span {
   font-size: 3rem;
 }
 
 /* MEDIA QUERIES */
 @media only screen and (max-width: 750px) {
+
+  h1.title {
+    font-size: 2rem;
+  }
+
+  h1.title span {
+    font-size: 2.5rem;
+  }
+
   .header-content, .header-content-left, .header-content-right {
     flex-direction: column;
+    font-size: 1rem;
     justify-content: center;
     align-items: center;
+  }
+
+  .header-content-left p {
+    text-align: center;
+  }
+
+  .header-content-right {
+    width: 100%;
   }
 }
